--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,8 @@ dependencies {
     //implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
 
+    //Coil
+    implementation "io.coil-kt:coil:2.4.0"
+
 
 }
