--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.fragment:fragment-ktx:1.6.0'
+
+
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
+
+
     //Navigation Dependencies using nav_version Variable to ensure same versions
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.2"
