Commit_020: weitere Experimente mit Animationen - YoYo entdeckt :-D

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,8 @@ dependencies {
     //Coil
     implementation "io.coil-kt:coil:2.4.0"
 
+    //Animations:
+    implementation 'com.daimajia.androidanimations:library:2.4@aar'
+
 
 }
