Commit_028: API implementiert - Quote of the Day - läuft. Muss aber noch bissle am Design und Performance werkeln. (Default Text am Anfang wegbekommen)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,11 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.4@aar'
 
 
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation 'com.squareup.moshi:moshi-kotlin:1.15.0'
+
+
+
 }
